Issue #3101792 by agami4: Prevent long private messages from overflowing on mobile (#1646)
Set a max-width so that the browser will be forced to wrap the text. This preserves the scanability of short messages which will try to stay on your own side (right) or the side of the other participants (left).

--- a/themes/socialbase/assets/css/message.css
+++ b/themes/socialbase/assets/css/message.css
@@ -83,6 +83,7 @@
 }
 
 .private-message-full {
+  max-width: 100%;
   margin-bottom: 2rem;
 }
 
